tests/baselines/reference/overloadOnConstInheritance2.errors.txt
tests/cases/compiler/overloadOnConstInheritance2.ts(5,11): error TS2430: Interface 'Deriver' incorrectly extends interface 'Base'.
  Types of property 'addEventListener' are incompatible.
    Type '(x: "bar") => 文字' is not assignable to type '{ (x: 文字): 任意; (x: "foo"): 文字; }'.
      Types of parameters 'x' and 'x' are incompatible.
        Type '"foo"' is not assignable to type '"bar"'.


==== tests/cases/compiler/overloadOnConstInheritance2.ts (1 errors) ====
    interface Base {
        addEventListener(x: string): any;
        addEventListener(x: 'foo'): string;
    }
    interface Deriver extends Base {
              ~~~~~~~
!!! error TS2430: Interface 'Deriver' incorrectly extends interface 'Base'.
!!! error TS2430:   Types of property 'addEventListener' are incompatible.
!!! error TS2430:     Type '(x: "bar") => 文字' is not assignable to type '{ (x: 文字): 任意; (x: "foo"): 文字; }'.
!!! error TS2430:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2430:         Type '"foo"' is not assignable to type '"bar"'.
        addEventListener(x: 'bar'): string; // shouldn't need to redeclare the string overload
    }
    